# MusicalMachineListeningUnityPlugin

./: AudioFeatureExtractor.cpp  AudioFeatureExtractor.h  AudioFeatureExtractorInterface.cpp  AudioFeatureExtractorInterface.h  BeatStatistics.cpp  BeatStatistics.h  CMakeLists.txt  COPYING  CalculateFFT.cpp  CalculateFFT.h  KeyClarity.cpp  KeyClarity.h  MMLLSTFT.cpp  MMLLSTFT.h  MMLLwindowing.cpp  MMLLwindowing.h  OnsetDetection.cpp  OnsetDetection.h  OnsetStatistics.cpp  OnsetStatistics.h  QitchData2048.h  QitchDetector.cpp  QitchDetector.h  README.md  SensoryDissonance.cpp  SensoryDissonance.h  SpectralEntropy.cpp  SpectralEntropy.h  SpectrumExtractor.cpp  SpectrumExtractor.h
TestAFE/: CMakeLists.txt  SoundFile.cpp  SoundFile.h  filenamesartmusic.h  main.cpp
Unity client code/: AudioFeatures.cs  CylinderMove.cs  GlobalEffect.cs  PrefabFireLR.cs
